@@ -15,6 +15,10 @@ Revision history for SPVM
         * A callback type must have one required method.
         * A class must have the required methods defined in the interface classes.
         * Remove callback_t. The feature of callback_t is merged into interface_t.
+        * Add the following native APIs
+          "free_env_prepared", "get_class_var_id_cache", "get_field_id_cache",  "get_method_id_cache"
+          "check_runtime_assignability_array_element", "check_runtime_assignability",
+          "free_env_raw", "new_env_raw", "allocator", "api",
         * Remove SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
         * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
         * Remove "byte_object_basic_type_id" native API. ID 9 is reused by "api" native API.
@@ -34,7 +38,7 @@ Revision history for SPVM
         * Remove "has_callback" native API. ID 106 is reused by "is_object_array" native API.
         * Remove "no_symbol_cache_flag" native API. ID 176 is reused by "get_method_id_cache" native API.
         * Remove "set_no_symbol_cache_flag" native API. ID 177 is reused by "get_field_id_cache" native API.
-        * Remove "get_class_var_id_cache" native API. ID 178 is reused by "iget_class_var_id_cache" native API.
+        * Remove "get_class_var_id_cache" native API. ID 178 is reused by "get_class_var_id_cache" native API.
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
